// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders as expected with account 1`] = `
<div>
  <div
    class="header"
  >
    <span
      class="title"
    >
      <span
        class="text-xl font-medium badge"
      >
        path
      </span>
    </span>
    <div
      class="ml-auto"
    >
      <div
        class="flex gap-1"
      >
        <div
          class=""
        >
          <div
            data-testid="AddTxDropdown"
          />
        </div>
        <div
          data-testid="FormButton"
        >
          <div
            data-testid="AccountForm"
          />
        </div>
        <div
          data-testid="FormButton"
        >
          <div
            data-testid="AccountForm"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header shows parent link 1`] = `
<div>
  <div
    class="header"
  >
    <span
      class="title"
    >
      <span
        class="text-xl font-medium badge"
      >
        <span>
          <a
            class="text-white text-opacity-50 hover:text-current"
            href="/dashboard/accounts/parent"
          >
            Assets
          </a>
          :
          account
        </span>
      </span>
    </span>
    <div
      class="ml-auto"
    >
      <div
        class="flex gap-1"
      >
        <div
          class=""
        >
          <div
            data-testid="AddTxDropdown"
          />
        </div>
        <div
          data-testid="FormButton"
        >
          <div
            data-testid="AccountForm"
          />
        </div>
        <div
          data-testid="FormButton"
        >
          <div
            data-testid="AccountForm"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
